ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junior-ingress
  namespace: sock-shop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - junior.com
      secretName: junior-tls
  rules:
    - host: junior.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
